gcc/testsuite/rust/rustc/ui/enum/enum-variant-type-2.rs
// Test that enum variants are not actually types.

enum Foo {
    Bar
}

fn foo(x: Foo::Bar) {} // { dg-error ".E0573." "" { target *-*-* } }

fn main() {}

